Arima model added

--- a/stock_price_prediction_case_study_1.ipynb
+++ b/stock_price_prediction_case_study_1.ipynb
@@ -487,21 +487,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"We will now use time series models,\n",
+    "   Models that we have used till now also had time series component in time delay approach\n",
+    "   in form of lagged variables,\n",
+    "   for time series models we do not need lagged variables, so we will remove them.\n",
+    "   \"\"\"\n",
+    "x_train_arima = x_train.loc[:, ['GOOGL', 'IBM', 'DEXJPUS', 'SP500', 'DJIA', 'VIXCLS']]\n",
+    "x_test_arima = x_test.loc[:, ['GOOGL', 'IBM', 'DEXJPUS', 'SP500', 'DJIA', 'VIXCLS']]\n",
+    "\n",
+    "tr_len = len(x_train_arima)\n",
+    "te_len = len(x_test_arima)\n",
+    "to_len = len(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/anaconda3/lib/python3.7/site-packages/statsmodels/tsa/base/tsa_model.py:225: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "  ' ignored when e.g. forecasting.', ValueWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_arima = ARIMA(endog=y_train, exog=x_train_arima, order=[1,0,1])\n",
+    "model_fit = model_arima.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_error_arima = mean_squared_error(y_train, model_fit.fittedvalues)\n",
+    "predicted = \n",
+    "test_error_arima = mean_squared_error(y_test, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+       "0.00028770783578489756"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "train_error_arima"
+   ]
   },
   {
    "cell_type": "code",
