--- a/derivative_pricing.ipynb
+++ b/derivative_pricing.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "# parameters for vol surface\n",
     "true_alpha = 0.1\n",
     "true_beta = 0.1\n",
-    "true_sigma2 = 0.2\n",
+    "true_sigma0 = 0.2\n",
     "\n",
     "# BS model\n",
     "risk_free_rate = 0.05"
@@ -74,10 +74,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def option_vol_from_surface(moneyness, time_to_maturity):\n",
+    "    vol = true_sigma0 + true_alpha*tim + np.square(true_beta*(moneyness-1))\n",
+    "    return vol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import norm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def call_option_price_from_bs(moneyness, time_to_maturity, option_vol):\n",
+    "    d1 = (np.log(1/moneyness) + (risk_free_rate+np.square(option_vol)/2)*time_to_maturity)/(option_vol*np.sqrt(time_to_maturity))\n",
+    "    d2 = (np.log(1/moneyness) + (risk_free_rate-np.square(option_vol)/2)*time_to_maturity)/(option_vol*np.sqrt(time_to_maturity))\n",
+    "    N_d1 = norm.cdf(d1)\n",
+    "    N_d2 = norm.cdf(d2)\n",
+    "    price = \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
