some small things added for feature selection

--- a/derivative_pricing.ipynb
+++ b/derivative_pricing.ipynb
@@ -190,11 +190,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Option price exibit non linear relationship with most of the variables meaning that non linear models will do better job.\n",
+    "\n",
+    "## Moneyness vs volatility shows more we deviate from moneyness, higher the volatility we face which illustrates volatiity skew/smile. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Univariate feature selection tries to find which is the most important variable, including many variables may overfit the data UFS is removing unnecessary or unimportant features generally select data based on training data\n",
+    "\n",
+    "## Some are : Variance threshold (based on some variance, remove columns that does not meet the variance criterion\n",
+    "\n",
+    "## Univariate feature selection: best features based on statistical tests, based on ANOVA, compare each feature with the targated variable to find out if there is statistacally important realtionship between them. It is called univariate because during this we ignore the other variables. Finally we compare all scores and choose the one that are highest. can use chi square ot f test.\n",
+    "\n",
+    "## Recusrsive feature elimination "
+   ]
   }
  ],
  "metadata": {
