univairate details added

--- a/derivative_pricing.ipynb
+++ b/derivative_pricing.ipynb
@@ -208,8 +208,29 @@
     "\n",
     "## Univariate feature selection: best features based on statistical tests, based on ANOVA, compare each feature with the targated variable to find out if there is statistacally important realtionship between them. It is called univariate because during this we ignore the other variables. Finally we compare all scores and choose the one that are highest. can use chi square ot f test.\n",
     "\n",
-    "## Recusrsive feature elimination "
+    "## Recusrsive feature elimination : recursivly considering smaller and smaller sets of features, first all features and slowly slowly we will prune unnecessary features."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
