--- a/derivative_pricing.ipynb
+++ b/derivative_pricing.ipynb
@@ -213,17 +213,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import packages for feature selction\n",
+    "from sklearn.feature_selection import SelectKBest, f_regression"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Some values in Y were zero, I have zeroed it out\"\"\"\n",
+    "best_features = SelectKBest(k='all', score_func=f_regression)\n",
+    "fit = best_features.fit(X,Y)\n",
+    "df_scores = pd.DataFrame(fit.scores_)\n",
+    "df_scores.index = ['Moneyness', 'Time to Maturity', 'Volatility']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# models to compare\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, ExtraTreesRegressor, AdaBoostRegressor\n",
+    "from sklearn.neural_network import MLPRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {\n",
+    "    'LR': LinearRegression(),\n",
+    "    'DT': DecisionTreeRegressor(),  #Classifiation and Regression Tree\n",
+    "    'SVR': SVR(),\n",
+    "    'KNR': KNeighborsRegressor(),\n",
+    "    'RFR': RandomForestRegressor(),\n",
+    "    'GFR': GradientBoostingRegressor(),\n",
+    "    'ETR': ExtraTreesRegressor(),\n",
+    "    'ADR': AdaBoostRegressor(),\n",
+    "    'NN': MLPRegressor()\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
