Run model using ANN, final conclusion added

--- a/derivative_pricing.ipynb
+++ b/derivative_pricing.ipynb
@@ -395,38 +395,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using hidden layer of size {'hidden_layer_sizes': (20,)}, we get mean test error as -0.00041094249064500273 and standard deviation of error as 0.0002760841737630239 for different folds\n",
+      "Using hidden layer of size {'hidden_layer_sizes': (50,)}, we get mean test error as -0.000224732456919616 and standard deviation of error as 0.000287866105745408 for different folds\n",
+      "Using hidden layer of size {'hidden_layer_sizes': (20, 20)}, we get mean test error as -0.00016443453680226676 and standard deviation of error as 0.0002169240198859461 for different folds\n",
+      "Using hidden layer of size {'hidden_layer_sizes': (20, 30, 50)}, we get mean test error as -0.00012732361386326882 and standard deviation of error as 0.0002836440709586334 for different folds\n",
+      "Using hidden layer of size {'hidden_layer_sizes': (10, 10, 10, 10)}, we get mean test error as -0.000491307998250422 and standard deviation of error as 0.0007821232824243891 for different folds\n"
+     ]
+    }
+   ],
    "source": [
     "means = grid_results.cv_results_['mean_test_score']\n",
     "st_dev = grid_results.cv_results_['std_test_score']\n",
     "params = grid_results.cv_results_['params']\n",
     "for mean, std, parameter in zip(means, st_dev, params):\n",
-    "    print(f\"Using hidden layer of size {parameter}, we get mean test error as {}\")"
+    "    print(f\"Using hidden layer of size {parameter}, we get mean test error as {mean} and standard deviation of error as {std} for different folds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'hidden_layer_sizes': (20,)},\n",
-       " {'hidden_layer_sizes': (50,)},\n",
-       " {'hidden_layer_sizes': (20, 20)},\n",
-       " {'hidden_layer_sizes': (20, 30, 50)},\n",
-       " {'hidden_layer_sizes': (10, 10, 10, 10)}]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.491637137568964e-06\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "#best model is one with hidden layer (20,30,50), check it's performance on test set\n",
+    "\n",
+    "model_nn = MLPRegressor(hidden_layer_sizes=(20,30,50))\n",
+    "res_nn = model_nn.fit(x_train, y_train)\n",
+    "test_error = mean_squared_error(res_nn.predict(x_test), y_test)\n",
+    "print(test_error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One thing you can observe that if you will remove the volatility data from the input variables and run the models again, you will get similar results which is a good thing becuase it implies that information of volatility is captured in other variables like moneyness and time to maturity, so better for us as we will need fewer variables to predict option prices.\n",
+    "\n",
+    "## This indicate one very important side development that we can side step the development of option volatility surface and achieve good prediction with small number of variables.\n",
+    "\n",
+    "## Proving we can use ANN to predict derivative prices without relying on impractical assumption in traditional derivative pricing. The price is we have to pay for some loss of accuracy but this reduced accuracy is well within limits. "
+   ]
   },
   {
    "cell_type": "code",
