--- a/risk_tolerance.ipynb
+++ b/risk_tolerance.ipynb
@@ -16,17 +16,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Independent variables will be demographic, financial and behavioural attriubutes\n",
+    "import pandas as pd\n",
+    "df = pd.read_excel('SCFP2009panel.xlsx')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Risky assets are MFs, stocks and bonds\n",
+    "df['Risky_asset07'] = df['NMMF07'] + df['STOCKS07'] + df['BOND07']\n",
+    "df['Risky_asset09'] = df['NMMF09'] + df['STOCKS09'] + df['BOND09']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Risk free assets are Savings, CDs and liquids\n",
+    "df['Risky_free07'] = df['LIQ07'] + df['CDS07'] + df['SAVBND07'] + df['CASHLI07']\n",
+    "df['Risky_free09'] = df['LIQ09'] + df['CDS09'] + df['SAVBND09'] + df['CASHLI09']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ratio of risky assests to total assests is riks tolerance\n",
+    "df['RT07'] = df['Risky_asset07']/(df['Risky_asset07']+df['Risky_free07'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stock index for normalising risky assets in 209\n",
+    "Average_SP500_2007=1478\n",
+    "Average_SP500_2009=948"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['RT09'] = (df['Risky_asset09']/(df['Risky_asset09']+df['Risky_free09']))*(Average_SP500_2009/Average_SP500_2007)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# absolute percentage change of RT\n",
+    "df['PerChange'] = np.abs(df['RT09']/df['RT07'] - 1) #if RT07 is zero, this will give error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(19285, 522)\n",
+      "(9230, 522)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# drop any row that contains NA\n",
+    "print(df.shape)\n",
+    "df = df.dropna(axis=0)\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9230, 522)\n",
+      "(7956, 522)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)\n",
+    "df = df[~df.isin([np.nan, np.inf, -np.inf]).any(1)]\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final dataframe created\n",
+    "import seaborn as sns"
+   ]
   },
   {
    "cell_type": "code",
