--- a/risk_tolerance.ipynb
+++ b/risk_tolerance.ipynb
@@ -139,12 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Final dataframe created\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -215,28 +225,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can observer the risk tolerance shifted from close to 1 in 2007 to close to 0 in 2009 ("
+    "We can observer the risk tolerance shifted from close to 1 in 2007 to close to 0 in 2009 (market effect of 2008, behaviour reversed after the crisis)\n",
+    "\n",
+    "Intelligent investors are those whose behaviour do not change by more than 10% (both sides)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_int = df[df['PerChange'] <= 0.1]\n",
+    "df_int['true_risk_tolerance'] = (df_int['RT07'] + df_int['RT09']) / 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# true_risk_tolerance is the predicted variable for our analysis, drop other variables\n",
+    "df_int = df_int.drop(labels = ['RT07', 'RT09', 'PerChange'], axis=1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(355, 520)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
