Grid search added for RFR

--- a/risk_tolerance.ipynb
+++ b/risk_tolerance.ipynb
@@ -477,7 +477,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Non linear models perform better than the "
+    "Non linear models perform better than the linear models. We have chosen RFR for further analysis. \n",
+    "\n",
+    "## Model tuning and Grid Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# one of the most important parameter in RFR is number of trees\n",
+    "param_grid = {'n_estimators':[50, 100, 150, 200, 250, 300, 350, 400]}\n",
+    "model = RandomForestRegressor()\n",
+    "kfold = KFold(n_splits=num_folds, random_state=seed)\n",
+    "grid_results = GridSearchCV(estimator=model, scoring=scoring, param_grid=param_grid, cv=kfold)\n",
+    "grid = grid_results.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best score is 0.7309444381550412 and best parameters is {'n_estimators': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Best score is {grid.best_score_} and best parameters is {grid.best_params_}')\n",
+    "means = grid.cv_results_['mean_test_score']\n",
+    "std = grid.cv_results_['s']"
    ]
   },
   {
