model added for results of grid search

--- a/risk_tolerance.ipynb
+++ b/risk_tolerance.ipynb
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,50 @@
    "source": [
     "print(f'Best score is {grid.best_score_} and best parameters is {grid.best_params_}')\n",
     "means = grid.cv_results_['mean_test_score']\n",
-    "std = grid.cv_results_['s']"
+    "std = grid.cv_results_['std_test_score']\n",
+    "parameter_score = grid.cv_results_['params']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model = RandomForestRegressor(n_estimators=100)\n",
+    "f_m = final_model.fit(x_train, y_train)\n",
+    "training_score = r2_score(f_m.predict(x_train), y_train)\n",
+    "r_score = r2_score(f_m.predict(x_test), y_test)\n",
+    "print(f\"Traini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7918478219273397"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_score"
    ]
   },
   {
