used same model for prediction again

--- a/risk_tolerance.ipynb
+++ b/risk_tolerance.ipynb
@@ -606,17 +606,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file_name = 'rfr_model_for_risk_toleance.sav'\n",
+    "dump(f_m, open(file_name, 'wb'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# load model from disk\n",
+    "loaded_model = load(open(file_name, 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training error is 0.9570408265665072\n",
+      "Test error is 0.7916296469727135\n"
+     ]
+    }
+   ],
+   "source": [
+    "training_score = r2_score(loaded_model.predict(x_train), y_train)\n",
+    "r_score = r2_score(loaded_model.predict(x_test), y_test)\n",
+    "print(f\"Training error is {training_score}\")\n",
+    "print(f\"Test error is {r_score}\")"
+   ]
   },
   {
    "cell_type": "code",
